# total-commander-plantuml-lister

./: CMakeLists.txt  LICENSE  README.md  plantumlwebview.ini  readme.md
.github/workflows/: cmake-single-platform.yml  update-plantuml.yml
resources/: pluginst.inf
scripts/: update_plantuml.py
src/: plantuml_wlx_ev2.cpp
